--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/248281.html">Make the list Fibonacci-like                    : 0248281</a>
+<a href="q/248324.html">Concatenatable numbers                          : 0248324</a>
 <a href="q/272452.html">FizzFizzFizzBuzz!                               : 0272452</a>
 <a href="q/272569.html">Print all legal chess moves                     : 0272569</a>
 <a href="q/272546.html">Output a 1-2-3 sequence                         : 0272546</a>
