--- a/q/103571.html
+++ b/q/103571.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::103571</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>008</td><td>Pip</td><td>240228T231322Z</td><td><a href="https://codegolf.stackexchange.com/questions/103571/an-array-of-challenges-1-alternating-arrays/271397#271397">DLosc</a></td></tr>
 <tr d-ix="1"><td>006</td><td>Brachylog</td><td>240228T225544Z</td><td><a href="https://codegolf.stackexchange.com/questions/103571/an-array-of-challenges-1-alternating-arrays/271396#271396">DLosc</a></td></tr>
 <tr d-ix="2"><td>003</td><td>Thunno 2 M</td><td>230723T092547Z</td><td><a href="https://codegolf.stackexchange.com/questions/103571/an-array-of-challenges-1-alternating-arrays/263204#263204">The Thon</a></td></tr>
@@ -839,7 +838,6 @@ console.log(f([2,3,3,2]));       // -&gt; False</code></pre>
 </div>
 </p>
 </div>
-<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -856,7 +854,7 @@ console.log(f([2,3,3,2]));       // -&gt; False</code></pre>
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/103571/">103571</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
