--- a/q/273875.html
+++ b/q/273875.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>PowerShell</td><td>240703T115900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273910#273910">user3141</a></td></tr>
-<tr d-ix="1"><td>020</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
-<tr d-ix="2"><td>015</td><td>K ngn/k</td><td>240703T112728Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273908#273908">ovs</a></td></tr>
-<tr d-ix="3"><td>009</td><td>Uiua</td><td>240703T112631Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273907#273907">noodle p</a></td></tr>
-<tr d-ix="4"><td>041</td><td>Google Sheets</td><td>240702T230407Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273881#273881">doubleun</a></td></tr>
-<tr d-ix="5"><td>047</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
-<tr d-ix="6"><td>005</td><td>Japt m</td><td>240703T085355Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273900#273900">Shaggy</a></td></tr>
-<tr d-ix="7"><td>006</td><td>05AB1E</td><td>240703T084621Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273899#273899">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>006</td><td>05AB1E</td><td>240703T084621Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273899#273899">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>043</td><td>PowerShell</td><td>240703T115900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273910#273910">user3141</a></td></tr>
+<tr d-ix="2"><td>020</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
+<tr d-ix="3"><td>015</td><td>K ngn/k</td><td>240703T112728Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273908#273908">ovs</a></td></tr>
+<tr d-ix="4"><td>009</td><td>Uiua</td><td>240703T112631Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273907#273907">noodle p</a></td></tr>
+<tr d-ix="5"><td>041</td><td>Google Sheets</td><td>240702T230407Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273881#273881">doubleun</a></td></tr>
+<tr d-ix="6"><td>047</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
+<tr d-ix="7"><td>005</td><td>Japt m</td><td>240703T085355Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273900#273900">Shaggy</a></td></tr>
 <tr d-ix="8"><td>032</td><td>Arturo</td><td>240703T074338Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273898#273898">chunes</a></td></tr>
 <tr d-ix="9"><td>046</td><td>R</td><td>240703T073506Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273896#273896">pajonk</a></td></tr>
 <tr d-ix="10"><td>020</td><td>APL+WIN</td><td>240703T062803Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273894#273894">Graham</a></td></tr>
@@ -52,7 +52,31 @@
 <tr d-ix="23"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 <tr d-ix="24"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>gÝo£õÜ
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f8//fDc/EOLD289POf//8Sk5JTUtPSMzKzsnNy8fAA" rel="nofollow noreferrer">Try it online.</a></p>
+<p>Or minor alternative:</p>
+<pre><code>ā&lt;o£ʒĀ
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f//SKNN/qHFpyYdafj/PzEpOSU1LT0jMys7JzcvHwA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>g       #  Push the length of the (implicit) input-list
+ Ý      #  Pop and push a list in the range [0,length]
+        # OR:
+ā       #  Push a list in the range [1, (implicit) input-length]
+ &lt;      #  Decrease each by 1 to the range [0,length)
+  o     # Map each value to 2 to the power this value
+   £    # Split the (implicit) input-string into parts of those sizes
+    õÜ  #  Trim all trailing &quot;&quot;
+        # OR:
+    ʒ   #  Filter these string-parts:
+     Ā  #   Check if truthy (where &quot;&quot; is falsey)
+        # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 43 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>%{for($i=1;$_[$i];$i*=2){$_|% S*g($i-1)$i}}
 </code></pre>
@@ -64,13 +88,13 @@ Relevant golfing:</p>
 <li><code>$_|% S*g($i-1)$i</code> takes the input string in <code>$_</code>, pipes it to <code>%</code> (an alias for ForEach-Object), calls the string object's member 'Substring' (the only member matching <code>S*g</code>), passing the start index and the length of the substring to retrieve. Shorter than <code>$_.Substring($i-1,$i)</code></li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, 20 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, 20 bytes</h1>
 <pre><code>-1%.,{.,2/)/~}*]`-1%
 </code></pre>
 <p><a href="https://tio.run/##S8/PSStOLsosKPn/X9dQVU@nWk/HSF9Tv65WKzYBKPD/f2JSckpqWnpGZlZ2Tm5ePgA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
 <p>Outputs like this, if you consider it valid output: <code>]&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;[</code></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 15 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 15 bytes</h1>
 <pre><code>{x@.=+|\2\!-#x}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs6qucNCz1a6JMYpR1FWuqOXiSnNQSkxKTklNS8/IzMrOyc3LVwKK6SglKkGllAC2ZQ/n" rel="nofollow noreferrer">Try it online!</a></p>
@@ -93,52 +117,29 @@ x@.=+|\2\!-#x / index back into the input string
    (,&quot;a&quot;; &quot;bc&quot;; &quot;defg&quot;)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Uiua, 9 bytes</h1>
+<div id="pu4" class="pu"><h1>Uiua, 9 bytes</h1>
 <p>This solution was written by Kai Schmidt, the creator of Uiua, not by me, so I'm making this a community wiki.</p>
 <pre><code>⊕□⌊ₙ2+1°⊏
 </code></pre>
 <p>This is a very simple solution, and very short: Take the range of 0 to the length of the input, add one to each, take the base-2 logarithm, and floor it. This list has natural numbers repeated doubling in length, so we use this as a group to take each part of the input into a list of boxes.</p>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 41 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 41 bytes</h1>
 <pre><code>=index(let(i,2^(row(A:A)-1),mid(A1,i,i)))
 </code></pre>
 <p><img src="https://i.sstatic.net/mC0gBiDs.png" alt="screenshot" /></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  47 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  47 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>f=-&gt;s,v=[],a=1{s ?f[s[a..],v&lt;&lt;s[0..a-1],a*2]:v}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN_XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKow309BJ1DYGSWkaxVmW1EG27CkpLihXSopUSk5JTUtPSMzKzsnNy8_KVYrkgCmDmAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>@OP just to let you know, the easy tasks are welcome! :)</p>
 <p>I have build a recursion with three variables: the original string, the output vector and the counter. The function chops a string piece, adds it to vector and updates the counter until the string is empty.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-m</code></a>, <s>9</s> <s>7</s> 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-m</code></a>, <s>9</s> <s>7</s> 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Input as a character array, output as a 2D character array</p>
 <pre><code>Wv2pV
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LW0&amp;code=V3YycFY&amp;input=WyJhIiwiYiIsImMiLCJkIiwiZSIsImYiLCJnIiwiaCIsImkiLCJqIiwiayIsImwiLCJtIiwibiIsIm8iXQotUQ" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>gÝo£õÜ
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f8//fDc/EOLD289POf//8Sk5JTUtPSMzKzsnNy8fAA" rel="nofollow noreferrer">Try it online.</a></p>
-<p>Or minor alternative:</p>
-<pre><code>ā&lt;o£õK
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f//SKNN/qHFh7d6//@fmJSckpqWnpGZlZ2Tm5cPAA" rel="nofollow noreferrer">Try it online.</a></p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>g       #  Push the length of the (implicit) input-list
- Ý      #  Pop and push a list in the range [0,length]
-        # OR:
-ā       #  Push a list in the range [1, (implicit) input-length]
- &lt;      #  Decrease each by 1 to the range [0,length)
-  o     # Map each value to 2 to the power this value
-   £    # Split the (implicit) input-string into parts of those sizes
-    õÜ  #  Trim all trailing &quot;&quot;
-        # OR:
-    õK  #  Remove all &quot;&quot;
-        # (after which the result is output implicitly)
-</code></pre>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>34</s></sup> 32 bytes</h1>
 <pre><code>$=&gt;[i:1chunk&amp;=&gt;[2i'i+1ceil log]]
